# personal-sdl-works

./: .gitignore  CMakeLists.txt
LazyFoo/: HelloSDL.cpp  ImageOnScreen.cpp  MUSIC.cpp  addTTFtest.cpp  alpha.cpp  clipRendering.cpp  colorKey.cpp  colorModulation.cpp  imgscale.cpp  loadPNG.cpp  loadtexture.cpp  mouse.cpp  multipleImages.cpp  primitivedraw.cpp  rotation.cpp  time.cpp
